Reemplazar componente Welcome por Auth en la página de inicio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Welcome from '@/components/Welcome.astro';
+import Auth from '@/components/auth.astro';
+
 
 
 ---
 
 <Layout>
-	<Welcome />
+	<Auth />
 </Layout>
