--- a/src/components/auth.astro
+++ b/src/components/auth.astro
@@ -1,27 +1,36 @@
 ---
-import { SignIn, SignOut } from "auth-astro/components";
 import { getSession } from "auth-astro/server";
+import GoggleIcon from "@/components/icons/goggle.svg";
+import Button from "@/components/Button.astro";
 
-const session = await getSession(Astro.request);
 ---
 
-<section class="flex w-full flex-col justify-center items-center">
-  <h1 class="font-semibold text-4xl text-gray-700">Welcome</h1>
-  <div class="flex justify-center w-full items- gap-8 p-2">
-    {
-      session?.user ? (
-        <div class="flex flex-col items-center">
-          <img
-            src={session.user.image}
-            alt="user avatar"
-            class="w-24 h-24 rounded-full"
-          />
-          <p class="text-xl font-semibold">{session.user.name}</p>
-          <SignOut>Logout</SignOut>
-        </div>
-      ) : (
-        <SignIn provider="goggle">Login</SignIn>
-      )
-    }
+<div
+  class="flex mx-auto max-w-lg rounded-xl border-2 gap-y-3 p-6 flex-col items-center"
+>
+  <h1 class="font-semibold text-balance text-black dark:text-white text-4xl text-center">
+    Log in to TaskApp
+  </h1>
+  <p class="text-neutral-600 dark:text-neutral-200 text-pretty text-center">
+    Log in with your favorite social account
+  </p>
+  <div class="flex flex-col justify-center w-full items-center gap-8 p-2">
+    <Button id="login-goggle" text="Continue with Google">
+      <GoggleIcon slot={"icon-left"} />
+    </Button>
   </div>
-</section>
+</div>
+
+
+
+
+<script>
+  import { $ } from "@/lib/dom-selector.ts";
+  const { signIn} = await import("auth-astro/client");
+
+  const $loginGoggle = $("#login-goggle");
+
+  $loginGoggle?.addEventListener("click", async () => {
+    await signIn("goggle");
+  });
+</script>
