--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,6 +3,8 @@ import GithubIcon from "@/components/icons/github.svg";
 import ArrowRightIcon from "@/components/icons/arrow-right.svg";
 import { getSession } from "auth-astro/server";
 import ThemeToggle from "@/components/theme-toggle.astro";
+import Button from "@/components/Button.astro";
+import UserMenu from "@/components/user-menu.astro";
 
 const session = await getSession(Astro.request);
 ---
@@ -16,8 +18,7 @@ const session = await getSession(Astro.request);
     </div>
 
     <div class="flex items-center gap-8 text-black dark:text-white">
-
-     <ThemeToggle />
+      <ThemeToggle />
       <a
         href="https://github.com/Larasoft123/taskApp-with-back"
         rel="noreferrer"
@@ -29,96 +30,13 @@ const session = await getSession(Astro.request);
 
       {
         !session?.user && (
-          <a
-            class="inline-flex items-center space-x-3 justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 disabled:pointer-events-none disabled:opacity-50 dark:focus-visible:ring-neutral-700 focus-visible:ring-neutral-500 border border-neutral-200 bg-neutral-200 shadow-sm hover:bg-neutral-100 hover:text-neutral-900 dark:border-neutral-800 dark:bg-neutral-900 dark:hover:bg-neutral-950 dark:hover:text-neutral-50 dark:hover:border-neutral-700/50 h-9 px-4 py-2 group"
-            href="/dashboard"
-          >
-            <span>Get Started</span>
-            <ArrowRightIcon />
-          </a>
+          <Button isLink={true} text={"Get Started"} href={"/auth"}>
+            <ArrowRightIcon slot={"icon-right"} />
+          </Button>
         )
       }
 
-
-
-
-  {
-       session?.user && (
-      
-      <div class="">
-        <!-- Profile dropdown -->
-        <div class="relative ml-3">
-          <div>
-            <button
-              type="button"
-              class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-              id="user-menu-button"
-              aria-expanded="false"
-              aria-haspopup="true"
-            >
-              <span class="absolute -inset-1.5"></span>
-              <span class="sr-only">Open user menu</span>
-              <img
-                class="size-8 rounded-full"
-                src={`${session?.user.image}`}
-                alt={`avatar de ${session?.user.name}`}
-              />
-            </button>
-          </div>
-
-          <!-- Profile dropdown -->
-
-          <div
-            class="absolute hidden bg-neutral-200 right-0 z-10 mt-4 w-48 origin-top-right rounded-md dark:text-neutral-200 dark:bg-neutral-900 cursor-pointer shadow-lg ring-1 ring-black/5 focus:outline-none"
-            role="menu"
-            id="user-menu"
-            aria-orientation="vertical"
-            aria-labelledby="user-menu-button"
-            tabindex="-1"
-          >
-       
-            <a
-              class="block px-4 py-2 text-sm hover:bg-neutral-300/75 dark:hover:bg-neutral-950 dark:hover:text-neutral-50 rounded"
-              role="menuitem"
-              tabindex="-1"
-              id="user-menu-item-0">Your Profile</a>
-            <a
-              class="block px-4 py-2 text-sm hover:bg-neutral-300/75 dark:hover:bg-neutral-950 dark:hover:text-neutral-50 rounded"
-              role="menuitem"
-              tabindex="-1"
-              id="user-menu-item-1">Settings</a>
-            <a
-              class="block px-4 py-2 text-sm hover:bg-neutral-300/75 dark:hover:bg-neutral-950 dark:hover:text-neutral-50 rounded"
-              role="menuitem"
-              tabindex="-1"
-              id="user-menu-item-2">Sign out</a >
-          </div>
-        </div>
-      </div>
-
-
-        )
-      }
-
-
-
-
+      {session?.user && <UserMenu session={session} />}
     </div>
   </div>
 </header>
-
-
-
-<script>
-    import {$} from "@/lib/dom-selector.ts";
-
-
-    const $userMenuButton = $("#user-menu-button");
-    const $userMenu = $("#user-menu");
-    let isOpen = false
-
-    $userMenuButton?.addEventListener("click",()=> {
-        isOpen = !isOpen
-        isOpen ? $userMenu?.classList.remove("hidden") : $userMenu?.classList.add("hidden")
-    })
-</script>
