add better animation

--- a/src/components/stars.astro
+++ b/src/components/stars.astro
@@ -1,19 +1,19 @@
 <div class="star hidden dark:block"></div>
-<div class="meteor-1 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))] "></div>
-<div class="meteor-2 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
-<div class="meteor-3 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
-<div class="meteor-4 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
-<div class="meteor-5 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
-<div class="meteor-6 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
-<div class="meteor-7 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
-<div class="meteor-8 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
-<div class="meteor-9 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
-<div class="meteor-10 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]0"></div>
-<div class="meteor-11 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]1"></div>
-<div class="meteor-12 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]2"></div>
-<div class="meteor-13 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]3"></div>
-<div class="meteor-14 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]4"></div>
-<div class="meteor-15 bg-[linear-gradient(_to_right,_#07115e,_rgba(255,_255,_255,_0)_)]  dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]5"></div>
+<div class="meteor-1 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-2 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-3 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-4 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-5 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-6 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-7 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-8 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-9 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-10 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-11 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-12 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-13 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-14 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
+<div class="meteor-15 bg-[linear-gradient(_to_right,_#ffff49,_#e7f612)] dark:bg-[linear-gradient(to_right,_#fff,_rgba(255,_255,_255,_0))]"></div>
 
 <style>
   .star {
@@ -332,8 +332,8 @@
     width: 300px;
     height: 1px;
     transform: rotate(-45deg);
-
     animation: meteor 5.7s linear infinite;
+ 
   }
   .meteor-1:before {
     content: "";
@@ -342,9 +342,8 @@
     height: 5px;
     border-radius: 50%;
     margin-top: -2px;
-    background: rgba(2, 27, 80, 0.7);
     background: rgba(255, 255, 255, 0.7);
-    box-shadow: 0 0 15px 3px #07115e;
+    box-shadow: 0 0 15px 3px #fff;
   }
 
   .meteor-2 {
