--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -9,7 +9,7 @@ import UserMenu from "@/components/user-menu.astro";
 const session = await getSession(Astro.request);
 ---
 
-<header class="w-full py-8 flex fixed top-0 z-100 justify-center items-center">
+<header class="w-full py-8 flex fixed top-0 px-4 z-100 justify-center items-center">
   <div class="max-w-7xl mx-auto px-2 flex justify-between w-full items-center">
     <div class="flex items-center gap-8">
       <a href="/">
@@ -30,7 +30,7 @@ const session = await getSession(Astro.request);
 
       {
         !session?.user && (
-          <Button isLink={true} text={"Get Started"} href={"/auth"}>
+          <Button isLink={true} text={"Get Started"} href={"/dashboard"}>
             <ArrowRightIcon slot={"icon-right"} />
           </Button>
         )
@@ -40,3 +40,27 @@ const session = await getSession(Astro.request);
     </div>
   </div>
 </header>
+
+
+ <style>
+  header{
+    animation: header-animation both;
+    animation-timeline: scroll();
+    animation-range: 0px 200px;
+  }
+
+
+
+  @keyframes header-animation {
+    0% {
+      
+    }
+    100% {
+      background-color: rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(10px);
+    }
+  }
+    
+ </style>
+
+
