--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,49 @@
 @import "tailwindcss";
-@import "tw-animate-css";
+
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+
+
+
+
+
+
+/* For Webkit browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+
+::-webkit-scrollbar-track {
+  background: var(--color-gray-200);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-gray-400);
+  border-radius: 4px;
+}
+
+/* Dark Mode styles */
+.dark ::-webkit-scrollbar-track {
+  background: var(--color-gray-800);
+}
+
+.dark ::-webkit-scrollbar-thumb {
+  background-color: var(--color-gray-600);
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color:  var(--color-gray-400) var(--color-gray-200);
+}
+
+.dark * {
+  scrollbar-color: var(--color-gray-600) var(--color-gray-800);
+}
+
+
 
 
 textarea{
@@ -9,3 +51,4 @@ textarea{
  resize: none !important;
 
 }
+
