--- a/src/components/user-menu.astro
+++ b/src/components/user-menu.astro
@@ -5,7 +5,17 @@ interface Props {
   session: Session;
 }
 
+interface UserMenuAction {
+  name: string;
+  href: string;
+}
+
 const { session } = Astro.props;
+
+const userMenuActions: UserMenuAction[] = [
+  { name: "dashboard", href: "/dashboard" },
+  { name: "Settings", href: "#" },
+];
 ---
 
 <div class="">
@@ -14,7 +24,7 @@ const { session } = Astro.props;
     <div>
       <button
         type="button"
-        class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+        class="relative cursor-pointer flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
         id="user-menu-button"
         aria-expanded="false"
         aria-haspopup="true"
@@ -39,24 +49,24 @@ const { session } = Astro.props;
       aria-labelledby="user-menu-button"
       tabindex="-1"
     >
-      <a
-        class="block px-4 py-2 text-sm hover:bg-neutral-300/75 dark:hover:bg-neutral-950 dark:hover:text-neutral-50 rounded"
-        role="menuitem"
-        tabindex="-1"
-        id="user-menu-item-0">Your Profile</a
-      >
+      {
+        userMenuActions.map(({ href, name }) => (
+          <a
+            class="block px-4 py-2 text-sm hover:bg-neutral-300/75 dark:hover:bg-neutral-950 dark:hover:text-neutral-50 rounded"
+            role="menuitem"
+            tabindex="-1"
+            href={href}
+          >
+            {name}
+          </a>
+        ))
+      }
 
-      <a
+      <button
         class="block px-4 py-2 text-sm hover:bg-neutral-300/75 dark:hover:bg-neutral-950 dark:hover:text-neutral-50 rounded"
         role="menuitem"
         tabindex="-1"
-        id="user-menu-item-1">Settings</a
-      >
-      <a
-        class="block px-4 py-2 text-sm hover:bg-neutral-300/75 dark:hover:bg-neutral-950 dark:hover:text-neutral-50 rounded"
-        role="menuitem"
-        tabindex="-1"
-        id="sign-out">Sign out</a
+        id="sign-out">Sign out</button
       >
     </div>
   </div>
@@ -66,17 +76,23 @@ const { session } = Astro.props;
   import { $ } from "@/lib/dom-selector.ts";
   const { signOut } = await import("auth-astro/client");
 
-  const $userMenuButton = $("#user-menu-button");
-  const $userMenu = $("#user-menu");
-  let isOpen = false;
-  const $signOut = $("#sign-out");
+  document.addEventListener("astro:page-load", () => {
+    const $userMenuButton = $("#user-menu-button");
+    const $userMenu = $("#user-menu");
+    let isOpen = false;
+    const $signOut = $("#sign-out");
 
-  $userMenuButton?.addEventListener("click", () => {
-    isOpen = !isOpen;
-    isOpen
-      ? $userMenu?.classList.remove("hidden")
-      : $userMenu?.classList.add("hidden");
+    $userMenuButton?.addEventListener("click", () => {
+      isOpen = !isOpen;
+      if (isOpen) {
+        $userMenu?.classList.remove("hidden");
+        $userMenuButton.ariaExpanded = "true";
+      } else {
+        $userMenu?.classList.add("hidden");
+        $userMenuButton.ariaExpanded = "false";
+      }
+    });
+
+    $signOut?.addEventListener("click", () => signOut());
   });
-
-  $signOut?.addEventListener("click", () => signOut());
 </script>
