--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -9,9 +9,39 @@ import UserMenu from "@/components/user-menu.astro";
 const session = await getSession(Astro.request);
 ---
 
-<header class="w-full py-8 flex fixed top-0 px-4 z-100 justify-center items-center">
+<header
+  class="w-full py-8 flex fixed top-0 px-4 z-100 justify-center items-center"
+>
   <div class="max-w-7xl mx-auto px-2 flex justify-between w-full items-center">
-    <div class="flex items-center gap-8">
+    <div class="flex justify-between items-center gap-8">
+      {
+        session && (
+          <button
+            id="sidebar-toggle"
+            data-drawer-target="default-sidebar"
+            data-drawer-toggle="default-sidebar"
+            aria-controls="default-sidebar"
+            type="button"
+            class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          >
+            <span class="sr-only">Open sidebar</span>
+            <svg
+              class="w-6 h-6"
+              aria-hidden="true"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                clip-rule="evenodd"
+                fill-rule="evenodd"
+                d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"
+              />
+            </svg>
+          </button>
+        )
+      }
+
       <a href="/">
         <h3 class="text-2xl">Task App</h3>
       </a>
@@ -41,26 +71,37 @@ const session = await getSession(Astro.request);
   </div>
 </header>
 
+<script>
+  import { $ } from "@/lib/dom-selector";
 
- <style>
-  header{
+  document.addEventListener("astro:page-load", () => {
+    const $sidebar = $("#sidebar");
+    const $sidebarToggle = $("#sidebar-toggle");
+
+    $sidebarToggle?.addEventListener("click", () => {
+      $sidebar?.classList.toggle("translate-x-0");
+    });
+    $sidebar?.addEventListener("click", (e) => {
+      $sidebar.classList.toggle("translate-x-0");
+    });
+
+    
+  });
+</script>
+
+<style>
+  header {
     animation: header-animation both;
     animation-timeline: scroll();
     animation-range: 0px 200px;
   }
 
-
-
   @keyframes header-animation {
     0% {
-      
     }
     100% {
       background-color: rgba(0, 0, 0, 0.2);
       backdrop-filter: blur(10px);
     }
   }
-    
- </style>
-
-
+</style>
