--- a/src/components/task-card.astro
+++ b/src/components/task-card.astro
@@ -1,5 +1,5 @@
 ---
-import { Status, TypeTask, } from "@prisma/client";
+import { Status, TypeTask } from "@prisma/client";
 import TaskBadge from "@/components/task-badge.astro";
 import { DeleteButton } from "@/components/delete-button.tsx";
 import Button from "@/components/Button.astro";
@@ -27,9 +27,9 @@ interface Props {
 const { title, id, tags, description, status, type, createdAt } = Astro.props;
 
 const STATUS_GRADIENT_CLASSES = {
-  PENDING: "from-yellow-400 to-orange-400", // yellow-400 to orange-400
-  IN_PROGRESS: "from-blue-500 to-violet-500", // blue-500 to violet-500
-  DONE: "from-green-500 to-teal-500", // green-500 to teal-500
+  PENDING: "bg-blue-500", // yellow-400 to orange-400
+  IN_PROGRESS: "bg-amber-500", // blue-500 to violet-500
+  DONE: "bg-green-500", // green-500 to teal-500
 };
 
 let formattedDate = "Fecha no disponible";
@@ -42,9 +42,23 @@ if (createdAt && !isNaN(new Date(createdAt).getTime())) {
 }
 ---
 
-  <article
-    class="relative task-card flex flex-col bg-white/95 dark:bg-gray-800/95 backdrop-blur-sm rounded-[10px] shadow-lg hover:shadow-xl transition-all duration-300 overflow-hidden h-full"
+
+
+
+
+
+
+
+<article
+  class="group max-w-md flex group bg-white/95 flex-col dark:bg-gray-800/95 backdrop-blur-sm rounded-[10px] shadow-lg hover:shadow-xl transition-all duration-300 overflow-hidden h-full"
+>
+
+  
+  <div
+    class={`flex relative flex-col  backdrop-blur-sm hover:shadow-xl transition-all overflow-hidden h-full  rounded-xl shadow-xl duration-300 border-animated`}
   >
+
+  
     <div class="p-6 flex flex-col h-full">
       <div class="flex-grow">
         <div class="flex justify-between items-start mb-2">
@@ -66,7 +80,7 @@ if (createdAt && !isNaN(new Date(createdAt).getTime())) {
 
         {
           tags && tags.length > 0 && (
-            <div class="mt-4 mb-3 flex flex-wrap gap-2 items-center">
+            <div class={` flex mt-4 mb-3 flex-wrap gap-2 items-center`}>
               {tags.map((tag) => (
                 <span class="inline-flex justify-center items-center gap-x-1.5 py-1 px-2.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800 dark:bg-blue-800/30 dark:text-blue-400">
                   <Tag class="w-3 h-3" />
@@ -80,37 +94,30 @@ if (createdAt && !isNaN(new Date(createdAt).getTime())) {
 
       <div class="border-t border-gray-200 dark:border-gray-700 mt-auto pt-4">
         <div class="flex justify-between items-center">
-          <span class="flex items-center gap-1.5 text-xs text-gray-500 dark:text-gray-400">
+          <span
+            class="flex items-center gap-1.5 text-xs text-gray-500 dark:text-gray-400"
+          >
             <Calendar class="w-3.5 h-3.5" />
             {formattedDate}
           </span>
           <div class="flex gap-2">
-            <Button text={"Editar"} commandfor={`task-modal-${id}`} command="show-modal" />
+            <Button
+              isLink={true}
+              href={`/task/${id}`}
+              text={"Editar"}
+             
+            />
             <DeleteButton client:load id={id} />
           </div>
         </div>
       </div>
     </div>
-  </article>
-
-
-<dialog
-  id={`task-modal-${id}`}
-  class="fixed inset-0 bg-transparent mx-auto my-auto bg-opacity-60 items-center justify-center z-50 transition-opacity duration-300"
->
-  <div
-    id="modal-content"
-    class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl px-20 py-10 inset-0 w-full relative"
-  >
-    <Button
-      commandfor={`task-modal-${id}`}
-      command="close"
-      id="close-modal-btn"
-      class="absolute cursor-pointer top-3 right-3 text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
-    >
-      <X class="w-6 h-6" slot={"icon-right"} />
-    </Button>
-
-    <CreateTaskForm client:visible edit={true} taskId={id} />
   </div>
-</dialog>
+</article>
+
+
+
+<style></style>
+
+
+<!-- "flex group flex-col bg-white/95 dark:bg-gray-800/95 backdrop-blur-sm hover:shadow-xl transition-all overflow-hidden h-full relative rounded-xl shadow-xl duration-300 border-animated" -->
