use transiton persist in start component

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Stars from "@/components/stars.astro";
 import Header from "@/components/header.astro";
 import { ClientRouter } from "astro:transitions";
+export const  prerender= true;
 ---
 
 <!doctype html>
@@ -15,7 +16,7 @@ import { ClientRouter } from "astro:transitions";
   </head>
   <body class="overflow-x-hidden text-white relative">
     <Header transition:persist />
-    <Stars />
+    <Stars transition:persist />
     <main>
       <slot />
     </main>
