--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -1,51 +1,48 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+
 import { CreateTaskForm } from "@/components/forms/create-task-form.tsx";
 import Button from "@/components/Button.astro";
 import { Plus, X } from "lucide-preact";
+import ContainerHeader from "@/components/containerHeader.astro";
 import Tasks from "@/components/tasks.astro";
 import SkeletonContainer from "@/components/defer/skeleton-container.astro";
 import {CreateTagForm} from "@/components/forms/create-tag-form";
+import SibebarLayout from "@/layouts/sidebarLayout.astro";
+import Container from "@/components/container.astro";
+
 ---
 
-<Layout>
-  <section
-    class="mt-34 max-w-6xl mx-auto dark:bg-transparent text-gray-800 dark:text-gray-200"
+<SibebarLayout>
+  <Container
   >
     <!-- Header -->
-    <header
-      class="bg-gray-200 dark:bg-gray-950/80 backdrop-blur-sm border-b border-gray-200 dark:border-gray-800"
-    >
-      <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="flex items-center justify-between h-16">
-          <h1 class="text-2xl font-bold text-gray-900 dark:text-white">
-            Mi Dashboard
-          </h1>
 
-          <div class="flex justify-center gap-4">
-            <Button
-              commandfor="task-modal"
-              command="show-modal"
-              text={"Crear Tarea"}
-            >
-              <Plus class="w-4 h-4 mr-2" slot={"icon-left"} />
-            </Button>
+    <ContainerHeader title="Mi Dashboard">
+      <Button
+        commandfor="task-modal"
+        command="show-modal"
+        text={"Crear Tarea"}
+      >
+        <Plus class="w-4 h-4 mr-2" slot={"icon-left"} />
+      </Button>
 
-            <Button text={"Crear Etiqueta"} commandfor="tag-modal" command="show-modal">
-              <Plus class="w-4 h-4 mr-2" slot={"icon-left"} />
-            </Button>
-          </div>
-        </div>
-      </div>
-    </header>
+      <Button text={"Crear Etiqueta"} commandfor="tag-modal" command="show-modal">
+        <Plus class="w-4 h-4 mr-2" slot={"icon-left"} />
+      </Button>
+    </ContainerHeader>
 
+
+   
     <!-- Main Content -->
     <div class="pt-24 container mx-auto text-white px-4 sm:px-6 lg:px-8 py-8">
-      <Tasks server:defer>
+      <Tasks  server:defer>
         <SkeletonContainer numberOfCards={9} slot="fallback" />
       </Tasks>
     </div>
-  </section>
+
+  </Container>
+
+
   <!-- Modal para Crear Tarea -->
   <dialog
     id="task-modal"
@@ -86,71 +83,6 @@ import {CreateTagForm} from "@/components/forms/create-tag-form";
       <CreateTagForm client:visible/>
     </div>
   </dialog>
-</Layout>
+</SibebarLayout>
 
-<!--
- <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-       
-        
-        <div
-          class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300"
-        >
-          <div class="flex justify-between items-start">
-            <h3 class="font-bold text-lg text-gray-800 dark:text-gray-100">
-              Diseñar la nueva landing page
-            </h3>
-            <span
-              class="bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded-full dark:bg-blue-900 dark:text-blue-300"
-              >Diseño</span
-            >
-          </div>
-          <p class="text-gray-600 dark:text-gray-400 mt-2">
-            Crear los mockups y el prototipo interactivo en Figma para la nueva
-            web.
-          </p>
-          <div class="mt-4 flex justify-between items-center">
-            <span class="text-sm text-gray-500">Vence: 30 de Julio</span>
-            <div class="flex -space-x-2">
-              <img
-                class="inline-block h-8 w-8 rounded-full ring-2 ring-white dark:ring-gray-800"
-                src="https://randomuser.me/api/portraits/women/79.jpg"
-                alt="User"
-              />
-              <img
-                class="inline-block h-8 w-8 rounded-full ring-2 ring-white dark:ring-gray-800"
-                src="https://randomuser.me/api/portraits/men/31.jpg"
-                alt="User"
-              />
-            </div>
-          </div>
-        </div>
 
-        
-        <div
-          class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300"
-        >
-          <div class="flex justify-between items-start">
-            <h3 class="font-bold text-lg text-gray-800 dark:text-gray-100">
-              Implementar autenticación
-            </h3>
-            <span
-              class="bg-green-100 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded-full dark:bg-green-900 dark:text-green-300"
-              >Backend</span
-            >
-          </div>
-          <p class="text-gray-600 dark:text-gray-400 mt-2">
-            Configurar el flujo de login y registro usando Auth.js.
-          </p>
-          <div class="mt-4 flex justify-between items-center">
-            <span class="text-sm text-gray-500">Vence: 5 de Agosto</span>
-            <div class="flex -space-x-2">
-              <img
-                class="inline-block h-8 w-8 rounded-full ring-2 ring-white dark:ring-gray-800"
-                src="https://randomuser.me/api/portraits/men/43.jpg"
-                alt="User"
-              />
-            </div>
-          </div>
-        </div>
-
-      </div> -->
