--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "@midudev/tailwind-animations";
 
 
 @custom-variant dark (&:where(.dark, .dark *));
@@ -56,7 +57,6 @@ textarea{
 }
 
 
-/* CSS independiente - copia esto completo */
 
 
 @keyframes borderRotate {
