--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -44,7 +44,7 @@ const supportedPagesWithSidebar = ["/dashboard", "/notes", "/tasks"];
       }
 
       <a href="/">
-        <h3 class="text-2xl">Task App</h3>
+        <h3 class="sm:text-2xl text-xl">Task App</h3>
       </a>
     </div>
 
