--- a/src/components/note.astro
+++ b/src/components/note.astro
@@ -1,11 +1,17 @@
 ---
-import { Calendar, Clock, Eye, FileText } from "lucide-preact";
-import TaskBadge from "@/components/task-badge.astro";
+import { Calendar, Clock,  FileText } from "lucide-preact";
+import { NoteBtn } from "@/components/note-btn";
+import { DeleteButton } from "@/components/delete-button.tsx";
 interface Props {
   note: any;
 }
 
+function formatDate(dateString: string) {
+  return new Date(dateString).toLocaleDateString("es-ES", { year: 'numeric', month: 'short', day: 'numeric' });
+}
+
 const { note } = Astro.props;
+
 ---
 
 <div
@@ -59,19 +65,8 @@ const { note } = Astro.props;
     </div>
 
     {/* Solutions Button */}
-    <button
-      data-note={note}
-      class={`w-full open-sidenav-btn flex items-center justify-center space-x-2 p-3 rounded-lg transition-all duration-300 hover:scale-[1.02]  dark:from-blue-600/15 dark:to-purple-600/15 dark:hover:from-blue-600/25 dark:hover:to-purple-600/25 dark:text-blue-300 bg-gradient-to-r from-blue-50 to-purple-50 hover:from-blue-100 hover:to-purple-100 text-blue-700`}
-    >
-      <Eye class="w-4 h-4" />
-      <span class="text-sm font-medium">Ver soluciones</span>
-      <span
-        class={`text-xs px-1.5 py-0.5 rounded-full dark:bg-purple-500 0 dark:text-purple-300 bg-purple-100 text-purple-700`}
-      >
-        {/* {note.solutions.length} */}
-      </span>
-    </button>
-
+    <NoteBtn client:load note={note} />
+   
     {/* Footer with dates */}
     <div
       class="flex items-center justify-between text-xs mt-4 pt-4 border-t border-white/5"
@@ -79,9 +74,21 @@ const { note } = Astro.props;
       <div class="flex items-center space-x-1">
         <Calendar class={`w-3 h-3 dark:text-gray-400  text-gray-500`} />
         <span class={"dark:text-gray-400 text-gray-500"}>
-          {/* {formatDate(note.createdAt)} */}
+          {formatDate(note.createdAt)} 
         </span>
       </div>
+
+
+
+       <div class="flex items-center space-x-1">
+      <DeleteButton client:load id={note.id}  endpoint="note"/>
+      </div>
+
+
+
+
+
+
       {
         note.updatedAt !== note.createdAt && (
           <div class="flex items-center space-x-1">
@@ -95,18 +102,3 @@ const { note } = Astro.props;
     </div>
   </div>
 </div>
-
-<script>
-  import { $$ } from "@/lib/dom-selector";
-  import { openSidenav } from "@/stores/sidenav-store.ts";
-
-  const $openSidenavBtns = $$(".open-sidenav-btn");
-
-  $openSidenavBtns.forEach(($btn) => {
-    $btn.addEventListener("click", () => {
-      openSidenav();
-      const {note} = $btn.dataset
-      console.log(note)
-    });
-  });
-</script>
