update deletebutton component for add prop of endpoint

--- a/src/components/task-card.astro
+++ b/src/components/task-card.astro
@@ -107,7 +107,7 @@ if (createdAt && !isNaN(new Date(createdAt).getTime())) {
               text={"Editar"}
              
             />
-            <DeleteButton client:load id={id} />
+            <DeleteButton client:load id={id}  endpoint="task"/>
           </div>
         </div>
       </div>
