update padding of container in small devices

--- a/src/components/container.astro
+++ b/src/components/container.astro
@@ -3,7 +3,7 @@
 ---
 
 <section
-    class="mt-34 flex-1 mx-auto px-4 max-w-[90rem] text-gray-800 dark:text-gray-200"
+    class="mt-34 flex-1 mx-auto sm:px-4 max-w-[90rem] text-gray-800 dark:text-gray-200"
   >
 <slot/>
 
