--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -26,7 +26,7 @@ const links: Link[] = [
     icon: tagsIcon,
   },
   {
-    href: "tags",
+    href: "/tags",
     label: "Tags",
     icon: tagsIcon
   }
